[FRON-206] fix dropdown menu overflow text (#132)
* fix dropdown menu overflow text

* rev version

* fix lock-file

--- a/packages/components/src/Dropdown/components/DropdownButton/DropdownButton.module.css
+++ b/packages/components/src/Dropdown/components/DropdownButton/DropdownButton.module.css
@@ -29,6 +29,8 @@
 .children {
   overflow: hidden;
   text-overflow: ellipsis;
+  white-space: nowrap;
+  flex: 1;
 }
 
 .hideChevron .children {
@@ -37,6 +39,7 @@
 
 .icon {
   margin-left: 0.25rem;
+  margin-right: 0.25rem;
 }
 
 .purple {
